Changed the way of implementing dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id("com.android.application")
-    id("kotlin-android")
-    id("kotlin-kapt")
-    id("dagger.hilt.android.plugin")
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 }
 
 apply {
-    from("../dependencies.gradle")
+    from "../dependencies.gradle"
 }
 
 android {
@@ -31,8 +31,8 @@ android {
 }
 
 dependencies {
-    implementation(coroutinesDependencies.values())
-    implementation(networkDependencies.values())
-    implementation(hiltDependency)
-    kapt(hiltCompiler)
+    implementation coroutinesDependencies.values()
+    implementation networkDependencies.values()
+    implementation hiltDependency
+    kapt hiltCompiler
 }
