--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
-    def coroutinesVersion = '1.3.9'
-    def retrofitVersion = '2.9.0'
-    def hiltVersion = '1.0.0-beta01'
+    def coroutinesVersion = "1.3.9"
+    def retrofitVersion = "2.9.0"
+    def hiltVersion = "1.0.0-beta01"
 
     coroutinesDependencies = [
             core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion",
