--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,15 @@
 ext {
     def coroutinesVersion = "1.3.9"
     def retrofitVersion = "2.9.0"
-    def hiltVersion = "1.0.0-beta01"
+    def materialComponentsVersion = "1.3.0"
+    def coreKtxVersion = "1.5.0"
+    hiltVersion = "2.36"
+    kotlinVersion = "1.5.20"
+
+    uiDependencies = [
+            material: "com.google.android.material:material:$materialComponentsVersion",
+            coreKtx: "androidx.core:core-ktx:$coreKtxVersion"
+    ]
 
     coroutinesDependencies = [
             core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion",
